@@ -698,7 +698,7 @@ namespace MCForge
 						byte[] level = new byte[blocks.Length];
 						for (int i = 0; i < blocks.Length; ++i)
 						{
-							if (blocks[i] < 80)
+							if (blocks[i] < 57) //CHANGED THIS TO INCOPARATE SOME MORE SPACE THAT I NEEDED FOR THE door_orange_air ETC.
 							{
 								level[i] = blocks[i];
 							}
@@ -1289,6 +1289,21 @@ namespace MCForge
                                     case Block.door_gold_air:
                                     case Block.door_cobblestone_air:
                                     case Block.door_red_air:
+
+                                    case Block.door_orange_air:
+                                    case Block.door_yellow_air:
+                                    case Block.door_lightgreen_air:
+                                    case Block.door_aquagreen_air:
+                                    case Block.door_cyan_air:
+                                    case Block.door_lightblue_air:
+                                    case Block.door_purple_air:
+                                    case Block.door_lightpurple_air:
+                                    case Block.door_pink_air:
+                                    case Block.door_darkpink_air:
+                                    case Block.door_darkgrey_air:
+                                    case Block.door_lightgrey_air:
+                                    case Block.door_white_air:
+
                                     case Block.door_dirt_air:
                                     case Block.door_grass_air:
                                     case Block.door_blue_air:
@@ -2195,6 +2210,21 @@ namespace MCForge
                                     case Block.door_gold_air:
                                     case Block.door_cobblestone_air:
                                     case Block.door_red_air:
+
+                                    case Block.door_orange_air:
+                                    case Block.door_yellow_air:
+                                    case Block.door_lightgreen_air:
+                                    case Block.door_aquagreen_air:
+                                    case Block.door_cyan_air:
+                                    case Block.door_lightblue_air:
+                                    case Block.door_purple_air:
+                                    case Block.door_lightpurple_air:
+                                    case Block.door_pink_air:
+                                    case Block.door_darkpink_air:
+                                    case Block.door_darkgrey_air:
+                                    case Block.door_lightgrey_air:
+                                    case Block.door_white_air:
+
                                     case Block.door_dirt_air:
                                     case Block.door_grass_air:
                                     case Block.door_blue_air:
