@@ -1421,6 +1421,21 @@ namespace MCForge
                 case Block.door_gold_air:
                 case Block.door_cobblestone_air:
                 case Block.door_red_air:
+
+                case Block.door_orange_air:
+                case Block.door_yellow_air:
+                case Block.door_lightgreen_air:
+                case Block.door_aquagreen_air:
+                case Block.door_cyan_air:
+                case Block.door_lightblue_air:
+                case Block.door_purple_air:
+                case Block.door_lightpurple_air:
+                case Block.door_pink_air:
+                case Block.door_darkpink_air:
+                case Block.door_darkgrey_air:
+                case Block.door_lightgrey_air:
+                case Block.door_white_air:
+
                 case Block.door_dirt_air:
                 case Block.door_grass_air:
                 case Block.door_blue_air:
