@@ -25,6 +25,8 @@ v5.3.0.0
 - Disabled color codes in Global Chat, it's just too risky with the exploits.
 - Added Suppot for SQLite3 (part done)
 - Added new help category, 'help'
+- New doors
+	- All colours are now represented (/door_orange, /door_cyan, /door_pink etc.)
 
 v5.2.0.0
 - Fixed the server-breaking freeze bug that happened when a player lagged (NOT logged) out.
